# ocean-server

./: Cargo.toml  package.json  tsconfig.json  turbo.json
libs/cloud-database/: Cargo.toml
libs/cloud-infra/: Cargo.toml
libs/mx-cloud-core/: Cargo.toml
libs/mx-codec/: Cargo.toml
libs/mx-codec/benches/: apply_benchmarks.rs  array_ops_benchmark.rs  codec_benchmark.rs  map_ops_benchmark.rs  text_ops_benchmark.rs  update_benchmark.rs
libs/mx-codec/benches/utils/: files.rs
libs/mx-codec/src/: lib.rs  sync.rs
libs/mx-codec/src/codec/: buffer.rs  integer.rs  string.rs
libs/mx-codec/src/doc/: mod.rs  utils.rs
libs/mx-codec/src/doc/common/: range.rs
libs/mx-codec/src/doc/types/: array.rs  map.rs  mod.rs  text.rs  value.rs
libs/mx-codec/src/doc/types/list/: iterator.rs  mod.rs  search_marker.rs
libs/mx-codec/src/protocol/: awareness.rs  doc.rs  mod.rs  scanner.rs  sync.rs
libs/mx-core/: Cargo.toml
libs/mx-logger/: Cargo.toml
libs/mx-logger/src/: formatter.rs  lib.rs  logger.rs
libs/mx-rpc/: Cargo.toml
libs/mx-storage/: Cargo.toml
libs/mx-wasm/: Cargo.toml
