[package]
name = "mx-codec"
version = "0.1.0"
edition = "2021"
authors = ["maxiee-li owenlideveloper@gmail.com"]
description = "high performance thread-safe CRDT implementation compatible with yjs"
include = ["src/**/*", "benches/**/*", "bin/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ======= workspace dependencies =======
nanoid = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
mx-logger = { workspace = true }

[dependencies]
bitvec = "1.0.1"
byteorder = "1.5"
nom = "7.1"
ordered-float = "4.1"
rand_chacha = "0.3"
rand_distr = "0.4"

[dev-dependencies]
assert-json-diff = "2.0"
criterion = { version = "0.5", features = ["html_reports"] }
lib0 = { version = "0.16", features = ["lib0-serde"] }
ordered-float = { version = "4.1", features = ["proptest"] }
path-ext = "0.1"
proptest = "1.3"
proptest-derive = "0.4"
yrs = "0.16.5"

[[bench]]
harness = false
name = "array_ops_benchmarks"

[[bench]]
harness = false
name = "codec_benchmarks"

[[bench]]
harness = false
name = "map_ops_benchmarks"

[[bench]]
harness = false
name = "text_ops_benchmarks"

[[bench]]
harness = false
name = "update_benchmarks"

[lib]
bench = true
