[package]
name = "mx-logger"
version = "0.1.0"
edition = "2021"
authors = ["maxieeli owenlideveloper@gmail.com"]

# == workspace dependencies ==
chrono = { workspace = true }

[dependencies]
nu-ansi-term = "0.49.0"
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = { version = "0.1.3", features = [
    "log-tracer",
    "std",
], default-features = false }
tracing-stackdriver = "0.8.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
